--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -14,7 +14,6 @@ jobs:
       - name: Release Drafter
         uses: release-drafter/release-drafter@v5.15.0
         with:
-          publish: true
           disable-autolabeler: true
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
