--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2.3.0
         with:
           push: true
-          tags: assol/parser-prerelease:${{ github.sha }}
+          tags: ${{ github.actor }}/parser-prerelease:${{ github.sha }}
         
       - name: Release Drafter
         uses: release-drafter/release-drafter@v5.15.0
