--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Release Drafter
+name: Release Workflow
 
 on:
   push:
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2.3.0
         with:
           push: true
-          tags: ${{ github.actor }}/parser-prerelease:${{ github.sha }}
+          tags: ghcr.io/${{ github.repository }}/parser-prerelease:${{ github.sha }}
         
       - name: Release Drafter
         uses: release-drafter/release-drafter@v5.15.0
