--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,13 +1,14 @@
-name: Docker Publish
+name: Deploy
 
 on:
   push:
     tags:
       - v*
-
+      
 env:
-  IMAGE_NAME: parser
-
+  BASE_IMAGE_NAME: ghcr.io/${{ github.repository }}
+  PRERELEASE_IMAGE_NAME: "${BASE_IMAGE_NAME}-prerelase:${{ github.sha }}"
+      
 jobs:
   push:
     runs-on: ubuntu-latest
@@ -15,30 +16,37 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
-
-      - name: Log into registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
-
-      - name: Push image
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Pull pre-release
+        run: docker pull "${PRERELEASE_IMAGE_NAME}"
+      
+      - name: Retag pre-release
+        id: retag
         run: |
-          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
-
-          # Change all uppercase to lowercase
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
+          
           # Strip "v" prefix from tag name
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
+          
           # Use Docker `latest` tag convention
           [ "$VERSION" == "master" ] && VERSION=latest
-
-          echo IMAGE_ID=$IMAGE_ID
+          
+          echo IMAGE_ID=${BASE_IMAGE_NAME}
           echo VERSION=$VERSION
-
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+          
+          docker tag "${PRERELEASE_IMAGE_NAME}" $IMAGE_ID:$VERSION
+          echo "::set-output name=RELEASE_IMAGE::${IMAGE_ID}:${VERSION}"
+        
+      - name: Push release
+        run: docker push ${{ steps.retag.outputs.RELEASE_IMAGE }}
+        
+        
+        
+      
