--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -5,6 +5,7 @@ name: Release Workflow
 on:
   push:
     branches: [ master ]
+  pull_request: 
 
 jobs:
   release-drafter:
@@ -15,6 +16,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Login to GitHub Container Registry
+        if: ${{ github.event_name == 'push' }}
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -24,10 +26,11 @@ jobs:
       - name: Build image
         uses: docker/build-push-action@v2.3.0
         with:
-          push: true
+          push: ${{ github.event_name == 'push' }}
           tags: ghcr.io/${{ github.repository }}-prerelease:${{ github.sha }}
         
       - name: Release Drafter
+        if: ${{ github.event_name == 'push' }}
         uses: release-drafter/release-drafter@v5.15.0
         with:
           publish: true
