--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -27,7 +27,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v2.3.0
         with:
-          push: ${{ github.event_name == 'push' }}
+          push: true
           tags: ghcr.io/${{ github.repository }}-prerelease:${{ github.sha }}
       
       - name: Comment PR with Docker Image
