--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Login to GitHub Container Registry
+        if: ${{ github.event_name == 'push' }}
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -26,17 +27,8 @@ jobs:
         id: build
         uses: docker/build-push-action@v2.3.0
         with:
-          push: true
+          push: ${{ github.event_name == 'push' }}
           tags: ghcr.io/${{ github.repository }}-prerelease:${{ github.sha }}
-      
-      - name: Comment PR with Docker Image
-        uses: actions/github-script@0.3.0
-        if: github.event_name == 'pull_request'
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
-            github.issues.createComment({ issue_number, owner, repo, body: "Bulded Docker image: ${{ steps.build.outputs.digest }}" });
       
       - name: Release Drafter
         if: ${{ github.event_name == 'push' }}
