--- a/.github/workflows/on_master_push.yml
+++ b/.github/workflows/on_master_push.yml
@@ -8,13 +8,15 @@ env:
   IMAGE_ID: ghcr.io/${{ github.repository }}-rc:${{ github.sha }}
 
 jobs:
-  build:
+  master-ci:
+    name: Master push CI
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
-      - uses: release-drafter/release-drafter@v5
+      - name: Release Drafter
+        uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -25,7 +27,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Docker build
+      - name: Docker build and push
         uses: docker/build-push-action@v2.3.0
         with:
           tags: ${{ env.IMAGE_ID }}
